--- a/app/views/psd-revised-flow/add-business-to-notification/business-role.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/business-role.html
@@ -30,7 +30,7 @@
             </h1>
           </legend>
           <div id="role-hint" class="govuk-hint">
-            You can choose more than one option except for online marketplace.
+            You can select more than one option except for online marketplace.
           </div>
           <div class="govuk-checkboxes" data-module="govuk-checkboxes">
             <div class="govuk-checkboxes__item">
