--- a/app/views/psd-revised-flow/add-new-product/multiple-products.html
+++ b/app/views/psd-revised-flow/add-new-product/multiple-products.html
@@ -25,7 +25,7 @@ Multiple products – {{ serviceName }} – GOV.UK Prototype Kit
       <h1 class="govuk-heading-l govuk-!-margin-bottom-9">We have found multiple products</h1>
 
       <p class="govuk-body govuk-!-margin-bottom-6">
-        Please select a record to continue or <a href="#" class="govuk-link">start again</a>.
+        Please select a record to continue or <a href="do-you-have-barcode" class="govuk-link">start again</a>.
       </p>
 
       <div class="govuk-form-group opss-text-align-right">
@@ -58,10 +58,12 @@ Multiple products – {{ serviceName }} – GOV.UK Prototype Kit
                 </button>
               </td>
             </tr>
+            
             <tr>
               <td>
                 <img src="../../public/images/pram-2.png" alt="Image" class="table-image">
               </td>
+
               <td class="table-content" colspan="2">
                 <h4 class="govuk-heading-s govuk-!-margin-bottom-1">phil&teds sport verso™ </h4>
                 <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Category: </strong>Baby & Toddler</p>
