--- a/app/views/psd-revised-flow/add-new-product/product-bl.html
+++ b/app/views/psd-revised-flow/add-new-product/product-bl.html
@@ -23,7 +23,7 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
         <span class="govuk-caption-l">{{title}}</span>
 
       <h1 class="govuk-heading-l govuk-!-margin-bottom-2">phil&teds sport™</h1>
-      <span class="govuk-caption-m govuk-!-margin-bottom-9">Found on Barcode Lookup</span>
+      <span class="govuk-caption-m govuk-!-margin-bottom-9">Imported from Barcode Lookup</span>
 
 
       <div class="barcode-column govuk-!-margin-bottom-8">
@@ -175,10 +175,14 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
           <a class="govuk-link" href="edit-product-information-bl">Add<span class="govuk-visually-hidden"> name</span></a>
         </dd>
     </dl>   
-  
+
   <div class="button-container">
-    <button type="submit" class="govuk-button" data-module="govuk-button" name="happy-with-photo" id="happy-with-photo-1" value="yes">
-      Create product record and add to notification
+    <button type="submit" class="govuk-button" data-module="govuk-button" id="not-found-it-1" name="not-found-it" value="yes">
+      Add to notification and create record 
+    </button>
+      <p class="govuk-body-m">or</p>
+    <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button" id="not-found-it-2" name="not-found-it" value="manual">
+      Add a different product  
     </button>
   </div>
 
