--- a/app/views/psd-revised-flow/add-new-product/product-psd.html
+++ b/app/views/psd-revised-flow/add-new-product/product-psd.html
@@ -22,9 +22,7 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
 
       <span class="govuk-caption-l">{{title}}</span>
 
-      <h1 class="govuk-heading-l govuk-!-margin-bottom-2">phil&teds sport™</h1>
-      <span class="govuk-caption-m govuk-!-margin-bottom-9">Found on the Product Safety Database</span>
-
+      <h1 class="govuk-heading-l govuk-!-margin-bottom-9">phil&teds sport™</h1>
 
       <div class="barcode-column govuk-!-margin-bottom-8">
         <img src="../../public/images/p+t-stock.png" alt="barcode" width="217" height="217">
@@ -188,11 +186,15 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
         </dd>
     </dl>   
 
-  <div class="button-container">
-    <button type="submit" class="govuk-button" data-module="govuk-button" name="happy-with-photo" id="happy-with-photo-1" value="yes">
-      Add to notification
-    </button>
-  </div>
+    <div class="button-container">
+      <button type="submit" class="govuk-button" data-module="govuk-button" id="not-found-it-1" name="not-found-it" value="yes">
+        Add to notification
+      </button>
+        <p class="govuk-body-m">or</p>
+      <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button" id="not-found-it-2" name="not-found-it" value="manual">
+        Add a different product  
+      </button>
+    </div>
 
   
 </form>
