--- a/app/views/psd-revised-flow/add-new-product/search-products.html
+++ b/app/views/psd-revised-flow/add-new-product/search-products.html
@@ -51,7 +51,7 @@
 
   <div class="govuk-grid-column-full">
     <label class="govuk-label" for="case-search-term">
-      Enter business name, Companies House number or address
+      Enter product name, brand or PSD reference
     </label>
     <div class="govuk-input__wrapper opss-search__wrapper govuk-!-width-two-thirds">
       <input type="text" class="govuk-input " id="searchInput">
