--- a/app/views/psd-revised-flow/add-business-to-notification/notification-task-list.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/notification-task-list.html
@@ -45,7 +45,7 @@ Product risk question – {{ serviceName }} – GOV.UK Prototype Kit
 
      <li>
       <h2 class="app-task-list__section">
-        <span class="app-task-list__section-number">1. </span>Choose the product for your notification <span style="font-weight: normal; font-size: 16px; color: #d4351c;">*</span>
+        <span class="app-task-list__section-number">1. </span>Add product  <span style="font-weight: normal; font-size: 16px; color: #d4351c;">*</span>
       </h2>
       <ul class="app-task-list__items">
         <li class="app-task-list__item">
