--- a/app/views/psd-revised-flow/add-business-to-notification/business-bartholomew.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/business-bartholomew.html
@@ -159,7 +159,7 @@
    
     <h2 class="govuk-heading-m govuk-!-margin-top-8  govuk-!-margin-bottom-3">Contact details</h2>
 
-    <div id="waste-hint" class="govuk-hint  govuk-!-margin-bottom-2">Any selected contact will be added to the notification.</div>
+    <div id="waste-hint" class="govuk-hint  govuk-!-margin-bottom-2">All selected contacts will be added to the notification.</div>
 
     <dl class="govuk-summary-list">
       <div class="govuk-summary-list__row">
