--- a/app/views/psd-revised-flow/add-new-product/do-you-have-barcode.html
+++ b/app/views/psd-revised-flow/add-new-product/do-you-have-barcode.html
@@ -25,7 +25,7 @@
     <fieldset class="govuk-fieldset" aria-describedby="haveBarcode-hint">
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
         <h1 class="govuk-fieldset__heading">
-          Do you have the product's barcode, serial number or ASIN?
+          Do you want to find the product by barcode, serial number or ASIN?
         </h1>
       </legend>
       <div id="haveBarcode-hint" class="govuk-hint">
